--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -75,6 +75,10 @@
   border-style: none !important;
 }
 
+.message-body pre code {
+  color: #24292e;
+}
+
 .message-body .card {
   margin-bottom: 1rem;
 }
